@@ -1,17 +1,21 @@
 package deepdive.jsonstore.domain.auth.auth;
 
+import deepdive.jsonstore.common.exception.AuthException;
 import deepdive.jsonstore.domain.auth.dto.JwtTokenDto;
+import deepdive.jsonstore.domain.member.model.Member;
+import deepdive.jsonstore.domain.member.repository.MemberRepository;
+import deepdive.jsonstore.domain.auth.model.CustomUserDetails;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
+import jakarta.annotation.PostConstruct;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
 import java.security.Key;
@@ -20,27 +24,31 @@ import java.util.stream.Collectors;
 
 @Slf4j
 @Component
+@RequiredArgsConstructor
 public class JwtTokenProvider {
 
-    private final Key key;
+    private final MemberRepository memberRepository;
 
-    // application.yml 또는 환경변수에서 secret 값 가져와서 key에 저장
-    public JwtTokenProvider(@Value("${jwt.secret}") String secretKey) {
+    private Key key;
+
+    @Value("${jwt.secret}")
+    private String secretKey;
+
+    @PostConstruct
+    protected void init() {
         byte[] keyBytes = Decoders.BASE64.decode(secretKey);
         this.key = Keys.hmacShaKeyFor(keyBytes);
     }
 
-    // 인증 정보를 바탕으로 JWT 토큰 생성
+    // ✅ 토큰 생성
     public JwtTokenDto generateToken(Authentication authentication) {
-        // 권한 목록 가져오기
         String authorities = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
                 .collect(Collectors.joining(","));
 
         long now = (new Date()).getTime();
+        Date accessTokenExpiresIn = new Date(now + 86400000); // 24시간
 
-        // Access Token 생성 (24시간)
-        Date accessTokenExpiresIn = new Date(now + 86400000);
         String accessToken = Jwts.builder()
                 .setSubject(authentication.getName())
                 .claim("auth", authorities)
@@ -48,20 +56,13 @@ public class JwtTokenProvider {
                 .signWith(key, SignatureAlgorithm.HS256)
                 .compact();
 
-        // Refresh Token 생성 (24시간)
-        String refreshToken = Jwts.builder()
-                .setExpiration(new Date(now + 86400000))
-                .signWith(key, SignatureAlgorithm.HS256)
-                .compact();
-
         return JwtTokenDto.builder()
                 .grantType("Bearer")
                 .accessToken(accessToken)
-                .refreshToken(refreshToken)
                 .build();
     }
 
-    // JWT 토큰으로부터 인증 정보 조회
+    // ✅ 인증 객체 생성
     public Authentication getAuthentication(String accessToken) {
         Claims claims = parseClaims(accessToken);
 
@@ -71,13 +72,17 @@ public class JwtTokenProvider {
 
         Collection<? extends GrantedAuthority> authorities = Arrays.stream(claims.get("auth").toString().split(","))
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
 
-        UserDetails principal = new User(claims.getSubject(), "", authorities);
-        return new UsernamePasswordAuthenticationToken(principal, "", authorities);
+        String email = claims.getSubject();
+        Member member = memberRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("사용자 정보를 찾을 수 없습니다."));
+
+        CustomUserDetails customUserDetails = new CustomUserDetails(member, authorities);
+        return new UsernamePasswordAuthenticationToken(customUserDetails, "", authorities);
     }
 
-    // JWT 토큰 유효성 검증
+    // ✅ 토큰 유효성 검증
     public boolean validateToken(String token) {
         try {
             Jwts.parserBuilder()
@@ -86,18 +91,18 @@ public class JwtTokenProvider {
                     .parseClaimsJws(token);
             return true;
         } catch (SecurityException | MalformedJwtException e) {
-            log.info("Invalid JWT Token", e);
+            throw new AuthException.InvalidTokenException();
         } catch (ExpiredJwtException e) {
-            log.info("Expired JWT Token", e);
+            throw new AuthException.ExpiredTokenException();
         } catch (UnsupportedJwtException e) {
-            log.info("Unsupported JWT Token", e);
+            throw new AuthException.UnsupportedTokenException();
         } catch (IllegalArgumentException e) {
-            log.info("JWT claims string is empty.", e);
+            throw new AuthException.EmptyTokenException();
         }
-        return false;
     }
 
-    // 토큰 파싱
+
+    // Claims 파싱
     private Claims parseClaims(String accessToken) {
         try {
             return Jwts.parserBuilder()
